[package]
name = "rnn"
version = "0.0.1"
edition = "2021"
authors = ["Eli Fischl <vio@ocf.berkeley.edu>","Patrick Unick <dev_storm@winux.com>"]
license = "MIT"
keywords = ["machine_learning"]
repository = "https://github.com/Vio-Eli/rnn"
description = "The ultimate machine learning crate."

[lib]

[dependencies]